==> nanoframework/nf-interpreter/targets/FreeRTOS_ESP32/ESP32_WROOM_32/nanoCLR/Windows.Devices.Spi/cpu_spi.cpp <==
#include <targetHAL.h>
#include <nanoCLR_Interop.h>
#include <nanoCLR_Runtime.h>
#include <nanoCLR_Checks.h>
#include <Esp32_os.h>
#include "Esp32_DeviceMapping.h"
#define MAX_CLOCK_FREQUENCY_GPIO_FULL 26000000
#define MAX_CLOCK_FREQUENCY_GPIO_HALF 40000000
#define MAX_CLOCK_FREQUENCY_NATIVE 80000000

bool CPU_SPI_Initialize(uint8_t spiBus)
{
    GPIO_PIN clockPin, misoPin, mosiPin;

    // Get pins used by spi bus
    CPU_SPI_GetPins(spiBus, clockPin, misoPin, mosiPin);

    // Check pins have been configured
    if (clockPin == GPIO_PIN_NONE || misoPin == GPIO_PIN_NONE || mosiPin == GPIO_PIN_NONE)
    {
        ESP_LOGE(TAG, "Spi pins for SPI%d not configured", spiBus);
        return false;
    }

    spi_bus_config_t bus_config{
        mosi_io_num : (int)mosiPin,  // mosi pin
        miso_io_num : (int)misoPin,  // miso pin
        sclk_io_num : (int)clockPin, // Clock
        quadwp_io_num : -1,          // Quad Write protect
        quadhd_io_num : -1,          // Quad Hold
        max_transfer_sz : 0,         // Default max transfer size ( 4096 )
        flags : 0,                   // SPICOMMON_BUSFLAG_* flags
        intr_flags : 0               // Interrupt flags
    };

    // First available bus on ESP32 is HSPI_HOST(1)
    // Try with DMA first
    esp_err_t ret = spi_bus_initialize((spi_host_device_t)(spiBus + HSPI_HOST), &bus_config, spiBus + HSPI_HOST);
    if (ret != ESP_OK)
    {
        // Try again without DMA
        esp_err_t ret = spi_bus_initialize((spi_host_device_t)(spiBus + HSPI_HOST), &bus_config, 0);
        if (ret != ESP_OK)
        {
            ESP_LOGE(TAG, "Unable to init SPI bus %d esp_err %d", spiBus + HSPI_HOST, ret);
            return false;
        }
    }

    nf_pal_spi[spiBus].BusIndex = spiBus;
    nf_pal_spi[spiBus].status = SPI_OP_STATUS::SPI_OP_READY;

    return true;
}

bool CPU_SPI_Uninitialize(uint8_t spiBus)
{
    esp_err_t ret = spi_bus_free((spi_host_device_t)(spiBus + HSPI_HOST));
    if (ret != ESP_OK)
    {
        ESP_LOGE(TAG, "spi_bus_free bus %d esp_err %d", spiBus + HSPI_HOST, ret);
        return false;
    }

    return true;
}

uint32_t CPU_SPI_Add_Device(const SPI_DEVICE_CONFIGURATION &spiDeviceConfig)
{
    // First available bus on ESP32 is HSPI_HOST(1), so add one
    spi_device_interface_config_t dev_config = GetConfig(spiDeviceConfig);

    // Add device to bus
    spi_device_handle_t deviceHandle;

    // Bus index
    int spiBusIndex = (spiDeviceConfig.Spi_Bus - 1);

    // First available bus on ESP32 is HSPI_HOST(1)
    esp_err_t ret = spi_bus_add_device((spi_host_device_t)(spiBusIndex + HSPI_HOST), &dev_config, &deviceHandle);
    if (ret != ESP_OK)
    {
        ESP_LOGE(TAG, "Unable to init SPI device, esp_err %d", ret);
        return 0;
    }

    return (uint32_t)deviceHandle;
}

HRESULT CPU_SPI_nWrite_nRead(
    uint32_t deviceHandle,
    SPI_DEVICE_CONFIGURATION &sdev,
    SPI_WRITE_READ_SETTINGS &wrc,
    uint8_t *writeData,
    int32_t writeSize,
    uint8_t *readData,
    int32_t readSize)
{
    (void)sdev;

    NANOCLR_HEADER();
    {
        unsigned char *writeDataBuffer = NULL;
        unsigned char *readDataBuffer = NULL;
        bool async = (wrc.callback != 0);
        esp_err_t ret;

        // get data bit length
        int databitLength = wrc.Bits16ReadWrite ? 16 : 8;

        // // Are we using SPI full-duplex for transfer ?
        // // The SPI doesn't support half duplex operation with DMA and without DMA the receive length is limited to 4
        // bytes
        // // So we run in full duplex mode all the time and simulate half duplex mode by creating a larger receive
        // buffer for
        // // the whole of the transaction and then copying the rx part to original buffer
        // // For full duplex we just use passed buffers.
        int MaxElementlength;
        if (wrc.fullDuplex)
        {
            // for full duplex just use largest element
            // TODO : There may be a problem with read data overwriting passed read buff if write size > read size
            // !!!!!!
            //        May for this case we should always allocate a separate buffer for transfer
            MaxElementlength = (readSize > writeSize) ? readSize : writeSize;

            readDataBuffer = readData;
        }
        else
        {
            // for Half-duplex its the length of both items
            MaxElementlength = writeSize + readSize;
            if (readSize)
                MaxElementlength += wrc.readOffset;

            int maxByteDatalength = (wrc.Bits16ReadWrite) ? MaxElementlength * 2 : MaxElementlength;

            if (readSize) // Any read data then use alternative buffer with write & read data
            {
                // Allocate a new write and read buffers to spoof half duplex operation using full duplex so we can use
                // DMA. length included write data, any dummy bytes(readOffset) and read data size
                writeDataBuffer = (unsigned char *)heap_caps_malloc(maxByteDatalength, MALLOC_CAP_DMA);
                if (writeDataBuffer == 0)
                    NANOCLR_SET_AND_LEAVE(CLR_E_OUT_OF_MEMORY);

                readDataBuffer = (unsigned char *)heap_caps_malloc(maxByteDatalength, MALLOC_CAP_DMA);
                if (readDataBuffer == 0)
                    NANOCLR_SET_AND_LEAVE(CLR_E_OUT_OF_MEMORY);

                memset(writeDataBuffer, 0, maxByteDatalength);
                memcpy(writeDataBuffer, writeData, writeSize);
                writeData = writeDataBuffer;
            }
        }

        NF_PAL_SPI *pnf_pal_spi = &nf_pal_spi[sdev.Spi_Bus];

        pnf_pal_spi->writeSize = writeSize;
        pnf_pal_spi->readSize = readSize;
        pnf_pal_spi->originalReadData = readData;
        pnf_pal_spi->readDataBuffer = readDataBuffer;
        pnf_pal_spi->writeDataBuffer = writeDataBuffer;
        pnf_pal_spi->fullDuplex = wrc.fullDuplex;
        pnf_pal_spi->readOffset = wrc.readOffset; // dummy bytes between write & read on half duplex
        pnf_pal_spi->callback = wrc.callback;

        // Set up SPI Transaction
        spi_transaction_t *pTrans = &pnf_pal_spi->trans;

        pTrans->flags = 0;
        pTrans->cmd = 0;
        pTrans->addr = 0;
        // length - Full duplex is total length, half duplex the TX length
        pTrans->length = databitLength * MaxElementlength;
        // rxlength - Full duplex is same as length or 0, half duplex is read length
        pTrans->rxlength = 0;
        pTrans->user = (void *)pnf_pal_spi;
        pTrans->tx_buffer = writeData;
        pTrans->rx_buffer = readDataBuffer;

        // Start asynchronous SPI transaction
        if (async)
        {
            pnf_pal_spi->callback = wrc.callback;

            ret = spi_device_queue_trans((spi_device_handle_t)deviceHandle, pTrans, portMAX_DELAY);
            if (ret != ESP_OK)
            {
                // Error so free up buffer if Half duplex
                if (!wrc.fullDuplex && readSize != 0)
                {
                    // Clean up
                    heap_caps_free(writeDataBuffer);
                    heap_caps_free(readDataBuffer);
                }

                switch (ret)
                {
                    case ESP_ERR_NO_MEM:
                        NANOCLR_SET_AND_LEAVE(CLR_E_OUT_OF_MEMORY);

                    case ESP_ERR_INVALID_ARG:
                        NANOCLR_SET_AND_LEAVE(CLR_E_INVALID_PARAMETER);

                    default:
                    case ESP_ERR_INVALID_STATE:
                        NANOCLR_SET_AND_LEAVE(CLR_E_FAIL);
                }
            }

            pnf_pal_spi->status = SPI_OP_STATUS::SPI_OP_RUNNING;

            // Return Busy to indicate ASync call started and callback will be called on completion
            NANOCLR_SET_AND_LEAVE(CLR_E_BUSY);
        }
        else
        {
            // Synchronous SPI operation
            // Use Polling method to start and wait to complete(quickest)
            ret = spi_device_polling_transmit((spi_device_handle_t)deviceHandle, pTrans);

            pnf_pal_spi->status = SPI_OP_STATUS::SPI_OP_COMPLETE;

            if (ret != ESP_OK)
            {
                if (!wrc.fullDuplex && readSize != 0)
                {
                    heap_caps_free(writeDataBuffer);
                    heap_caps_free(readDataBuffer);
                }
                NANOCLR_SET_AND_LEAVE(CLR_E_INVALID_PARAMETER);
            }

            // Finish up half duplex, done in callback
            // frees buffer and copies read data
        }
    }

    NANOCLR_NOCLEANUP();
}

uint32_t CPU_SPI_MaxClockFrequency(uint32_t spi_bus)
{
    bool directPin = false;

    GPIO_PIN clockPin, misoPin, mosiPin;

    CPU_SPI_GetPins(spi_bus, clockPin, misoPin, mosiPin);

    // Check if direct pins being used
    switch (clockPin)
    {
        case 14:
            if (misoPin == 12 && mosiPin == 13)
                directPin = true;
            break;

        case 18:
            if (misoPin == 19 && mosiPin == 23)
                directPin = true;
            break;

        default:
            break;
    }

    if (directPin)
        return MAX_CLOCK_FREQUENCY_NATIVE;

    return MAX_CLOCK_FREQUENCY_GPIO_HALF;
}
