==> ThatsFokus/nf-interpreter-1/targets/AzureRTOS/SiliconLabs/_nanoCLR/System.Device.Spi/cpu_spi.cpp <==
#include <sys_dev_spi_native_target.h>

HRESULT CPU_SPI_nWrite_nRead(
    uint32_t deviceHandle,
    SPI_DEVICE_CONFIGURATION &sdev,
    SPI_WRITE_READ_SETTINGS &wrc,
    uint8_t *writeBuffer,
    int32_t writeSize,
    uint8_t *readBuffer,
    int32_t readSize)
{
    NANOCLR_HEADER();
    {
        bool busConfigIsHalfDuplex;

        NF_PAL_SPI *palSpi = (NF_PAL_SPI *)deviceHandle;

        // If callback then use aync operation
        bool sync = (wrc.callback == 0);

        // Save width of transfer
        palSpi->BufferIs16bits = wrc.Bits16ReadWrite;

        // Callback sync / async
        palSpi->Callback = wrc.callback;

        if (writeBuffer != NULL)
        {
            palSpi->WriteSize = writeSize;
        }

        if (readBuffer != NULL)
        {
            palSpi->ReadSize = readSize;
        }

        // === Setup the operation and init buffers ===
        palSpi->BusIndex = sdev.Spi_Bus;

        // adjust the bus index to match the PAL struct
        NF_SpiDriver_SetFramelength(palSpi->Handle, wrc.Bits16ReadWrite ? 16 : 8);

        // set bus config flag
        busConfigIsHalfDuplex = (palSpi->BusConfiguration == SpiBusConfiguration_HalfDuplex);

        if (writeBuffer != NULL)
        {
            // set the pointer to the write buffer as BYTE
            palSpi->WriteBuffer = (uint8_t *)writeBuffer;
        }

        if (readBuffer != NULL)
        {
            // set DMA read buffer
            if (palSpi->ReadSize > 0)
            {
                palSpi->ReadBuffer = (uint8_t *)readBuffer;
            }
        }

        // if CS is to be controlled by the driver, set the GPIO
        if (palSpi->ChipSelect >= 0)
        {
            // assert pin based on CS active level
            CPU_GPIO_SetPinState(palSpi->ChipSelect, (GpioPinValue)sdev.ChipSelectActiveState);
        }

        if (sync)
        {
            // Sync operation
            // perform SPI operation using driver's SYNC API
            if (palSpi->WriteSize != 0 && palSpi->ReadSize != 0)
            {
                // Transmit+Receive
                if (wrc.fullDuplex)
                {
                    // Full duplex
                    // Uses the largest buffer size as transfer size
                    NF_SpiDriver_TransferBlocking(
                        palSpi->Handle,
                        palSpi->WriteBuffer,
                        palSpi->ReadBuffer,
                        palSpi->WriteSize > palSpi->ReadSize ? palSpi->WriteSize : palSpi->ReadSize);
                }
                else
                {
                    // send operation
                    // TODO
                    // if (busConfigIsHalfDuplex)
                    // {
                    //     // half duplex operation, set output enable
                    //     palSpi->Handle->spi->CR1 |= SPI_CR1_BIDIOE;
                    // }
                    NF_SpiDriver_TransmitBlocking(palSpi->Handle, palSpi->WriteBuffer, palSpi->WriteSize);

                    // receive operation
                    // TODO
                    // if (busConfigIsHalfDuplex)
                    // {
                    //     // half duplex operation, set output enable
                    //     palSpi->Handle->spi->CR1 &= ~SPI_CR1_BIDIOE;
                    // }
                    NF_SpiDriver_ReceiveBlocking(palSpi->Handle, palSpi->ReadBuffer, palSpi->ReadSize);
                }
            }
            else
            {
                // Transmit only or Receive only
                if (palSpi->ReadSize != 0)
                {
                    // receive
                    // TODO
                    // if (busConfigIsHalfDuplex)
                    // {
                    //     // half duplex operation, set output enable
                    //     palSpi->Handle->spi->CR1 &= ~SPI_CR1_BIDIOE;
                    // }
                    NF_SpiDriver_ReceiveBlocking(palSpi->Handle, palSpi->ReadBuffer, palSpi->ReadSize);
                }
                else
                {
                    // send
                    // TODO
                    if (busConfigIsHalfDuplex)
                    {
                        // half duplex operation, set output enable
                        // palSpi->Handle->spi->CR1 |= SPI_CR1_BIDIOE;
                    }
                    NF_SpiDriver_TransmitBlocking(palSpi->Handle, palSpi->WriteBuffer, palSpi->WriteSize);
                }
            }

            CompleteTransfer(palSpi->Handle);

            // if CS is to be controlled by the driver, set the GPIO
            if (palSpi->ChipSelect >= 0)
            {
                // de-assert pin based on CS active level
                CPU_GPIO_TogglePinState(palSpi->ChipSelect);
            }
        }
        else
        {
            // Start an Asyncronous SPI transfer
            // perform SPI operation using driver's ASYNC API
            // Completed on calling SPI Callback

            // if CS is to be controlled by the driver, set the GPIO
            if (palSpi->ChipSelect >= 0)
            {
                // assert pin based on CS active level
                CPU_GPIO_SetPinState(palSpi->ChipSelect, (GpioPinValue)sdev.ChipSelectActiveState);
            }

            // this is a Async operation
            // perform SPI operation using driver's ASYNC API
            if (palSpi->WriteSize != 0 && palSpi->ReadSize != 0)
            {
                // Transmit+Receive
                if (wrc.fullDuplex)
                {
                    // Full duplex
                    // single operation, clear flag
                    palSpi->SequentialTxRx = false;

                    // Uses the largest buffer size as transfer size
                    NF_SpiDriver_Transfer(
                        palSpi->Handle,
                        palSpi->WriteBuffer,
                        palSpi->ReadBuffer,
                        palSpi->WriteSize > palSpi->ReadSize ? palSpi->WriteSize : palSpi->ReadSize,
                        SpiTransferCompleteCallback);
                }
                else
                {
                    // flag that an Rx is required after the Tx operation completes
                    palSpi->SequentialTxRx = true;

                    // start send operation
                    if (busConfigIsHalfDuplex)
                    {
                        // // half duplex operation, set output enable
                        // palSpi->Handle->spi->CR1 |= SPI_CR1_BIDIOE;
                    }

                    // receive operation will be started in the callback after the above completes
                    NF_SpiDriver_Transmit(
                        palSpi->Handle,
                        palSpi->WriteBuffer,
                        palSpi->WriteSize,
                        SpiTransferCompleteCallback);
                }
            }
            else
            {
                // Transmit only or Receive only
                if (palSpi->ReadSize != 0)
                {
                    // single operation, clear flag
                    palSpi->SequentialTxRx = false;

                    // start receive
                    NF_SpiDriver_Receive(
                        palSpi->Handle,
                        palSpi->ReadBuffer,
                        palSpi->ReadSize,
                        SpiTransferCompleteCallback);
                }
                else
                {
                    // single operation, clear flag
                    palSpi->SequentialTxRx = false;

                    // start send
                    NF_SpiDriver_Transmit(
                        palSpi->Handle,
                        palSpi->WriteBuffer,
                        palSpi->WriteSize,
                        SpiTransferCompleteCallback);
                }
            }

            // Inform caller async operation started
            NANOCLR_SET_AND_LEAVE(CLR_E_BUSY);
        }
    }

    NANOCLR_NOCLEANUP();
}

bool CPU_SPI_Initialize(uint8_t busIndex, const SPI_DEVICE_CONFIGURATION &busConfiguration)
{
    NF_PAL_SPI *palSpi = NULL;
    NF_SpiDriver_Init_t *initSpiData = NULL;
    Ecode_t configResult;
    GPIO_Port_TypeDef port;
    uint32_t portPin;
    void (*initSpiConfig)(NF_SpiDriver_Init_t &, bool) = NULL;

    // init the PAL struct for this SPI bus and assign the respective driver
    // all this occurs if not already done
    // why do we need this? because several SPIDevice objects can be created associated to the same bus
    switch (busIndex)
    {
#if GECKO_USE_SPI0 == TRUE
        case 0:
            palSpi = &SPI0_PAL;
            initSpiConfig = &InitSpiConfig0;
            break;
#endif

#if GECKO_USE_SPI1 == TRUE
        case 1:
            palSpi = &SPI1_PAL;
            initSpiConfig = &InitSpiConfig1;
            break;
#endif

#if GECKO_USE_SPI2 == TRUE
        case 2:
            palSpi = &SPI2_PAL;
            initSpiConfig = &InitSpiConfig2;

            break;
#endif

#if GECKO_USE_SPI3 == TRUE
        case 3:
            palSpi = &SPI3_PAL;
            initSpiConfig = &InitSpiConfig3;
            break;
#endif

#if GECKO_USE_SPI4 == TRUE
        case 4:
            palSpi = &SPI4_PAL;
            initSpiConfig = &InitSpiConfig4;
            break;
#endif

#if GECKO_USE_SPI5 == TRUE
        case 5:
            palSpi = &SPI5_PAL;
            initSpiConfig = &InitSpiConfig5;
            break;
#endif

        default:
            // this SPI bus is not valid
            return false;
    }

    if (palSpi->Handle == NULL)
    {

        // allocate memory for the USART_InitSync_TypeDef
        palSpi->Handle = (NF_SpiDriver_Handle_t)platform_malloc(sizeof(NF_SpiDriver_HandleData_t));

        // sanity check allocation
        if (palSpi->Handle == NULL)
        {
            return false;
        }

        memset(palSpi->Handle, 0, sizeof(NF_SpiDriver_HandleData_t));

        // allocate memory for the NF_SpiDriver_Init_t
        initSpiData = (NF_SpiDriver_Init_t *)platform_malloc(sizeof(NF_SpiDriver_Init_t));

        // sanity check allocation
        if (initSpiData == NULL)
        {
            platform_free(palSpi->Handle);

            return false;
        }

        memset(initSpiData, 0, sizeof(NF_SpiDriver_Init_t));

        // call handler to configure pins
        initSpiConfig(*initSpiData, busConfiguration.BusConfiguration == SpiBusConfiguration_HalfDuplex);

        // get the SPI configuration
        GetSpiConfig(busConfiguration, *initSpiData);

        configResult = NF_SpiDriver_Init(palSpi->Handle, initSpiData);
        _ASSERTE(configResult == ECODE_OK);

        palSpi->ChipSelect = busConfiguration.DeviceChipSelect;

        // setup GPIO for CS
        if (busConfiguration.DeviceChipSelect >= 0)
        {
            GetIoLine(busConfiguration.DeviceChipSelect, &port, &portPin);
            GPIO_PinModeSet(port, portPin, gpioModePushPull, busConfiguration.ChipSelectActiveState ? 0 : 1);
        }
    }

    return true;
}

bool CPU_SPI_Uninitialize(uint8_t busIndex)
{
    NF_PAL_SPI *palSpi = NULL;
    GPIO_Port_TypeDef port;
    uint32_t portPin;

    // get the PAL struct for the SPI bus
    switch (busIndex)
    {
#if GECKO_USE_SPI0 == TRUE
        case 0:
            palSpi = &SPI0_PAL;

            break;
#endif

#if GECKO_USE_SPI1 == TRUE
        case 1:
            palSpi = &SPI1_PAL;

            break;
#endif

#if GECKO_USE_SPI2 == TRUE
        case 2:
            palSpi = &SPI2_PAL;

            break;
#endif

#if GECKO_USE_SPI3 == TRUE
        case 3:
            palSpi = &SPI3_PAL;

            break;
#endif

#if GECKO_USE_SPI4 == TRUE
        case 4:
            palSpi = &SPI4_PAL;
            break;
#endif

#if GECKO_USE_SPI5 == TRUE
        case 5:
            palSpi = &SPI5_PAL;

            break;
#endif

        default:
            // the requested SPI bus is not valid
            return false;
    }

    // reset GPIO for CS
    if (palSpi->ChipSelect >= 0)
    {
        GetIoLine(palSpi->ChipSelect, &port, &portPin);
        GPIO_PinModeSet(port, portPin, gpioModeInputPull, 0);
    }

    NF_SpiDriver_DeInit(palSpi->Handle);

    // free memory
    platform_free(palSpi->Handle->initData);
    platform_free(palSpi->Handle);

    palSpi->Handle = NULL;

    return true;
}

HRESULT CPU_SPI_Add_Device(const SPI_DEVICE_CONFIGURATION &spiDeviceConfig, uint32_t &handle)
{
    // check supported bus configuration: all valid except simplex
    if (spiDeviceConfig.BusConfiguration == SpiBusConfiguration_Simplex)
    {
        return CLR_E_NOT_SUPPORTED;
    }

    handle = (uint32_t)GetNfPalfromBusIndex(spiDeviceConfig.Spi_Bus);

    return S_OK;
}

HRESULT CPU_SPI_MaxClockFrequency(uint32_t spiBus, int32_t *frequency)
{
    if (spiBus - 1 >= NUM_SPI_BUSES)
    {
        return CLR_E_INVALID_PARAMETER;
    }

    // According to STM : "At a minimum, the clock frequency should be twice the required communication frequency."
    // So maximum useable frequency is CoreClock / 2.
    // SPI3 or SPI4 are on APB1, so divide max frequency by four.
    *frequency = (spiBus == 2 or spiBus == 3) ? SystemCoreClock >>= 2 : SystemCoreClock >> 1;

    return S_OK;
}
